feat!: moving from injected popup, into native statusbar for lightweight app, add launch at login option

--- a/tonesync/tonesync.entitlements
+++ b/tonesync/tonesync.entitlements
@@ -10,6 +10,10 @@
 	<true/>
 	<key>com.apple.security.device.usb</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>$(TeamIdentifierPrefix)$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	</array>
 	<key>com.apple.security.temporary-exception.iokit-user-client-class</key>
 	<array>
 		<string>IOUSBDeviceUserClientV2</string>
